test/fail/bad-char-lit3.mo
ignore('\e2\98\83'); // actually good
ignore('\ff')
